content in place for projects desktop

--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -79,10 +79,14 @@
     <script src="../assets/js/members.js"></script>
     <div style="background-image: url('../assets/img/projs-background.svg'); background-size: cover; background-position-y: -20%; background-repeat: no-repeat;">
     <div class="container">
-        <h2 id ="projects-header" class="jumptarget">PROJECTS GALLERY</h2>
-        <p id="projects-subtitle">View our assortment of projects through the years!</p>
-        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
-        <div class="container">
+        <h1 style="text-align: center;"><strong>PROJECT GALLERY</strong></h1>
+        <h6 style="text-align: center;  font-style: italic; font-weight: .1px; padding-bottom: 5%;">View our assortment of projects over the years</h6>
+        <p style="padding-left: 6.7%;">Categories of: 
+            <mark style="border-radius: 10%; background-color: #CCE6FF;">DELIVERABLES</mark>
+            <mark style="border-radius: 10%; background-color: #FFF6A9;">TOPIC</mark>
+            <mark style="border-radius: 10%; background-color: #CCF4D5;">TOOLS USED</mark>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
+        <div class="container" style="padding-top: 7%;">
             <div class="row">
               <div class="col-6 col-sm-4" style="text-align: center">
                 <div style="padding-bottom: 10%;">
@@ -92,7 +96,7 @@
                 <br>
                 <figcaption style="padding-top: 3%; width: 70%;">
                 <mark style="border-radius: 10%; background-color: #CCE6FF;">Mobile UI Design</mark>
-                <mark style="border-radius: 10%; background-color: #FFF6A9;">Environment</mark>
+                <mark style="border-radius: 10%; background-color: #FFF6A9; padding-left: 4%;">Environment</mark>
                 <mark style="border-radius: 10%; background-color: #CCF4D5;">Figma</mark>
                 <mark style="border-radius: 10%; background-color: #CCF4D5;">iOS Dev</mark>
                 </figcaption>
