--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -65,6 +65,14 @@
             <img alt="galaxy" src="../assets/img//members/galaxy.png" class = "galaxy-img"/>
         </div>
 
+        <div class = "helmet">
+            <img alt="helmet" src="../assets/img//members/helmet.png" class = "helmet-img-2"/>
+        </div>
+
+        <div class = "helmet">
+            <img alt="helmet" src="../assets/img//members/helmet.png" class = "helmet-img-1"/>
+        </div>
+
         <!-- Header -->
         <div class = "header">
             <h1> OUR INVENTORS </h1>
