--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -76,7 +76,7 @@
         <!-- Header -->
         <div class = "header">
             <h1> OUR INVENTORS </h1>
-            <p> Meet the heart behind our designs!</p>
+            <h6> Meet the heart behind our designs!</h6>
         </div>
 
         <!-- Exec Board -->
