--- a/indexv15.html
+++ b/indexv15.html
@@ -62,32 +62,57 @@
     </nav>
 
     <!-- Landing Section -->
-    <div class="landing-container">
-        <div class="container">
-            <div class="social-icons">
-                <a href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                <a href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <section id="landing-container">
+        <div class="landing-container">
+            <div class="container">
+                <!-- <div class="social-icons">
+                    <a href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
+                </div> -->
+                <!-- <div class="container d-flex align-items-center justify-content-center">
+                    <div class="landing-text">
+                        <h3><span id="we-are-top" class="landing-text-top">We are</span></h3>
+                        <h3><span id="we-are-bottom" class="landing-text-top">We are</span></h3>
+                        <h1><span class="landing-text-bkd">Invention</span></h1>
+                        <h1><span class="landing-text-bkd">Corps</span></h1>
+                    </div>
+                </div> -->
             </div>
-            <!-- <div class="container d-flex align-items-center justify-content-center">
-                <div class="landing-text">
-                    <h3><span id="we-are-top" class="landing-text-top">We are</span></h3>
-                    <h3><span id="we-are-bottom" class="landing-text-top">We are</span></h3>
-                    <h1><span class="landing-text-bkd">Invention</span></h1>
-                    <h1><span class="landing-text-bkd">Corps</span></h1>
-                </div>
-            </div> -->
+            <img class="scene" data-modifier="30" src="assets/img/mainscrollv15/landscape.png">
+            <img class="scene" data-modifier="0" src="assets/img/mainscrollv15/lower-island.png">
+            <script src="https://s.electerious.com/basicScroll/dist/basicScroll.min.js"></script>
+            <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
         </div>
-        <img class="scene" data-modifier="18" src="assets/img/mainscrollv15/landscape.png">
-        <img class="scene" data-modifier="0" src="assets/img/mainscrollv15/lower-island.png">
-        <script src="https://s.electerious.com/basicScroll/dist/basicScroll.min.js"></script>
-        <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
-    </div>
+    </section>
 
+    <!-- About Section -->
+    <section id="about">
+        <div class="container">
+            <h2 id ="about-header" class="jumptarget">Inventing ways to make a better world.</h2>
+            <p> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
+        </div>
+    </section>
 
-    <!-- <img src="assets/img/mainscroll1-5/pillar-island.png" alt="Pillar Island" id="pillar-island"> -->
+    <!-- Footer -->
+    <footer>
+        Made with ♥ by the
+        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
+    </footer>
 
+    <!-- Bootstrap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!-- Animation Libraries -->
+    <!-- <script src="assets/js/particles.js"></script>
+    <script src="assets/js/app.js"></script> -->
+    <!-- Custom Scripts -->
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/basicScroll.min.js"></script>
+    <!-- <script src="assets/js/members.js"></script> -->
+</body>
 
    <!-- <section id="landing">
         <div class="container d-flex align-items-center justify-content-center" id="landing-container">
@@ -98,15 +123,17 @@
         </div>
     </section> -->
 
-    <!-- About Section 
-    <section id="about">
-        <div class="container">
-            <h2 id ="about-header" class="jumptarget">Inventing ways to make a better world.</h2>
-            <p>
-                We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. 
-            </p>
-            <div style="background-image: assets/img/mainscroll1-5/pillar-island.png">
+    <!-- About Section -->
+    <!-- <section id="about">
+        <div id="about">
+            <div class="text-box d-flex align-items-center justify-content-center">
+                <h2 id ="about-header" class="jumptarget">Inventing ways to make a better world.</h2>
+                <p id="about-header" class="jumptarget"> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
             </div>
+        <img class="scene" data-modifier="18" src="assets/img/mainscrollv15/landscape.png">
+        <img class="scene" data-modifier="0" src="assets/img/mainscrollv15/lower-island.png">
+        <script src="https://s.electerious.com/basicScroll/dist/basicScroll.min.js"></script>
+        <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
         </div>
     </section> -->
 
@@ -182,24 +209,5 @@
             </div>
         </div>
     </section> -->
-
-    <!-- Footer -->
-    <footer>
-        Made with ♥ by the
-        <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
-    </footer>
-
-    <!-- Bootstrap Scripts -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <!-- Animation Libraries -->
-    <!-- <script src="assets/js/particles.js"></script>
-    <script src="assets/js/app.js"></script> -->
-    <!-- Custom Scripts -->
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/basicScroll.min.js"></script>
-    <!-- <script src="assets/js/members.js"></script> -->
-</body>
 
 </html>
