stars background members page

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -61,6 +61,11 @@
     </nav>
     <div class = "middle">
         <!-- Background images -->
+
+        <div class = "stars">
+            <img alt="stars" src="../assets/img//members/stars.png" class = "stars-img"/>
+        </div>
+
         <div class = "galaxy">
             <img alt="galaxy" src="../assets/img//members/galaxy.png" class = "galaxy-img"/>
         </div>
