--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -91,7 +91,7 @@
                 <div class = "row">
                     <div class = "col-6 col-sm-3">
                         <div class="dot blue">
-                            <div class = "quote">I like pie</div>
+                            <div class = "quote">"Eduaction is the most powerful weapon which you can use to change the world" - Nelson Mandela</div>
                             <div class = "img-container">
                                 <img alt="bongi" src="../assets/img/members/bongi.png" class = "member"/>
                             </div>
@@ -101,7 +101,7 @@
                     </div>
                     <div class = "col-6 col-sm-3">
                         <div class="dot red">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">Try new things and don't be scared of success.</div>
                             <div class = "img-container">
                                 <img alt="carlos" src="../assets/img/members/carlos.png" class = "member"/>
                             </div>
@@ -121,7 +121,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot red">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">Would I rather be feared or loved? Both. I want people to be afriad of how much they love me.</div>
                             <div class = "img-container">
                             <img alt="allan" src="../assets/img//members/allan.png" class = "member"/>
                             </div>
@@ -133,7 +133,7 @@
                 <!-- <div class = "row"> -->
                     <div class = "col-4 col-sm-4">
                         <div class="dot yellow">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">Nothing is impossible, the word itself says, I'm possible!</div>
                             <div class = "img-container">
                             <img alt="grace" src="../assets/img//members/grace.png" class = "member"/>
                             </div>
@@ -153,7 +153,7 @@
                     </div>
                     <div class = "col-6 col-sm-4">
                         <div class="dot green">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">I also wanted to sleep-in but here we both are...</div>
                             <div class = "img-container">
                             <img alt="natalie c" src="../assets/img//members/natc.png" class = "member"/>
                             </div>
@@ -193,7 +193,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot green">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">Do you wanna start a band?</div>
                             <div class = "img-container">
                             <img alt="anika" src="../assets/img//members/anika.png" class = "member"/>
                             </div>
@@ -277,7 +277,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot red">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">pie connoisseur</div>
                             <div class = "img-container">
                             <img alt="iris" src="../assets/img//members/iris.png" class = "member"/>
                             </div>
@@ -299,7 +299,7 @@
                 <div class = "row"> -->
                     <div class = "col-4 col-sm-3">
                         <div class="dot blue">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">Takes 7-10 business days to respond to messages, is trying his best.</div>
                             <div class = "img-container">
                             <img alt="jeffrey" src="../assets/img//members/jeffrey.png" class = "member"/>
                             </div>
@@ -319,7 +319,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot yellow">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">“The only thing predictable about life is its unpredictability” – Ratatouille</div>
                             <div class = "img-container">
                             <img alt="katrina" src="../assets/img//members/katrina.png" class = "member"/>
                             </div>
@@ -383,7 +383,7 @@
                 <div class = "row"> -->
                     <div class = "col-4 col-sm-3">
                         <div class="dot yellow">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">I'm wearing transition lenses because I'm adaptable and visionary.</div>
                             <div class = "img-container">
                             <img alt="neema" src="../assets/img//members/neema.png" class = "member"/>
                             </div>
@@ -393,7 +393,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot red">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">When you can't decide between two ice cream flavors, buy them both. Don't limit yourself.</div>
                             <div class = "img-container">
                             <img alt="nicole" src="../assets/img//members/nicole.png" class = "member"/>
                             </div>
@@ -467,7 +467,7 @@
                 <div class = "row"> -->
                     <div class = "col-4 col-sm-3">
                         <div class="dot yellow">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">If you're scared of being 'too optimistic' you'll become a realist - and that's no fun.</div>
                             <div class = "img-container">
                             <img alt="shaantam" src="../assets/img//members/shaantam.png" class = "member"/>
                             </div>
