--- a/v1.5/webdevteam.html
+++ b/v1.5/webdevteam.html
@@ -68,7 +68,7 @@
                 <div class = "row-fluid">
                     <div class = "col-6 col-sm-5th">
                         <div class="dot blue">
-                            <div class = "quote">I like pie</div>
+                            <div class = "quote">Practice makes perfect, but nobody's perfect, so why practice? - Kurt Cobain</div>
                             <div class = "img-container">
                                 <img alt="bongi" src="../assets/img/members/bongi.png" class = "member"/>
                             </div>
