start of website

--- a/v1.5/anindividualproject15.html
+++ b/v1.5/anindividualproject15.html
@@ -28,6 +28,7 @@
   <!-- Custom Styling -->
   <link rel="stylesheet" href="../assets/css/stylesv15.css" type="text/css" />
   <link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" />
+<link rel="stylesheet" href="../assets/css/anindividualproj15.css" type="text/css" />
 </head>
 
 <body>
@@ -59,6 +60,34 @@
             </div>
         </div>
     </nav>
+
+    <!-- That Cool Top Bar with the image and the info introducing the project -->
+    <div class="topbar">
+        <div class="container">
+            <div class="row">
+                <div class="col1">
+                    <img src="../assets/img/netic/colors.png" class="topbar-img">
+                </div>
+                <div class="col1">
+                    <h3>netic health</h3>
+                    <h5>designing a better experience for physical therapy patients.</h5>
+                </div>
+            </div>
+        </div> 
+    </div>
+
+
+    <div class="container">
+
+
+    </div>
+   
+
+
+
+
+
+
 
     <!-- Footer -->
     <!-- <footer>
