font size adjustements and quotes

--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -455,7 +455,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot yellow">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">I'm addicted to a 2007 medieval clicking simulator please send help</div>
                             <div class = "img-container">
                             <img alt="ryan" src="../assets/img//members/ryan.png" class = "member"/>
                             </div>
