--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot yellow">
-                            <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
+                            <div class = "quote">*screams in international popK sensational sunshine rainbow traditional transfer USB hub shrimp</div>
                             <div class = "img-container">
                             <img alt="maya" src="../assets/img//members/maya.png" class = "member"/>
                             </div>
