finishes the top bar

--- a/v1.5/anindividualproject15.html
+++ b/v1.5/anindividualproject15.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Custom Styling -->
   <link rel="stylesheet" href="../assets/css/stylesv15.css" type="text/css" />
-  <link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" />
+  <!--<link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" /> -->
 <link rel="stylesheet" href="../assets/css/anindividualproj15.css" type="text/css" />
 </head>
 
@@ -68,9 +68,24 @@
                 <div class="col1">
                     <img src="../assets/img/netic/colors.png" class="topbar-img">
                 </div>
-                <div class="col1">
+                <div class="col2">
                     <h3>netic health</h3>
                     <h5>designing a better experience for physical therapy patients.</h5>
+                    <hr>
+                    <div class="row">
+                        <div class="col1">
+                            <h4>Duration</h4>
+                            <h4>Focus</h4>
+                            <h4>Tools</h4>
+                            <h4>Partner</h4>
+                        </div>
+                        <div class="col2">
+                            <h6>Feb 2020 - May 2020</h6>
+                            <h6>Health, Society, Public Health, Accessibility</h6>
+                            <h6>Figma, Adobe Illustrator, TensorFlow, Python</h6>
+                            <h6>Netic Health</h6>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div> 
