--- a/v1.5/anindividualproject15.html
+++ b/v1.5/anindividualproject15.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Custom Styling -->
   <link rel="stylesheet" href="../assets/css/stylesv15.css" type="text/css" />
-  <!--<link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" /> -->
+  <link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" />
 <link rel="stylesheet" href="../assets/css/anindividualproj15.css" type="text/css" />
 </head>
 
@@ -86,6 +86,7 @@
                             <h6>Netic Health</h6>
                         </div>
                     </div>
+                    <hr>
                 </div>
             </div>
         </div> 
