mainscroll: landing, about, mission, and projects placeholder

--- a/indexv15.html
+++ b/indexv15.html
@@ -80,8 +80,8 @@
                     </div>
                 </div> -->
             </div>
-            <img class="scene" data-modifier="30" src="assets/img/mainscrollv15/landscape.png">
-            <img class="scene" data-modifier="0" src="assets/img/mainscrollv15/lower-island.png">
+            <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2.png">
+            <img class="scene" data-modifier="0" src="assets/img/mainscrollv15/scroll-level-1.png">
             <script src="https://s.electerious.com/basicScroll/dist/basicScroll.min.js"></script>
             <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
         </div>
@@ -91,12 +91,36 @@
     <section id="about">
         <div class="container">
             <h2 id ="about-header" class="jumptarget">Inventing ways to make a better world.</h2>
-            <p> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
+            <p class="container"> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
         </div>
     </section>
 
+    <!-- Mission and Members -->
+    <section id="members">
+        <div class="container">
+            <h2 id="members-title" class="d-flex align-items-center justify-content-center">Who are we?</h2>
+            <p class="container"> Let us introduce you to the hearts and minds behind our work. </p>
+        </div>
+        <div class="button" id="members-button">
+            <a href="v1.5/members.html">Members</a>
+        </div>
+        <img src="assets/img/mainscrollv15/pencil.svg" class="pencil align-items-center justify-content-center" alt="Drawing a better future.">
+        <div class="container">
+            <h2 id="about-title" class="d-flex align-items-center justify-content-center">Our Story</h2>
+            <p class="container"> Learn more about our mission, values, and founding principles. </p>
+        </div>
+        <div class="button" id="about-button">
+            <a href="v1.5/about.html">About</a>
+        </div>
+    </section>
+
+    <!-- Featured Projects -->
+    <section id="projects">
+        <img src="assets/img/mainscrollv15/project-section.svg" class="solar-system" alt="Exploring our recent projects.">
+    </section>
+
     <!-- Footer -->
-    <footer>
+    <footer id="footer">
         Made with ♥ by the
         <span> <a href="v1.5/webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
     </footer>
