--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -91,7 +91,7 @@
                 <div class = "row">
                     <div class = "col-6 col-sm-3">
                         <div class="dot blue">
-                            <div class = "quote">"Eduaction is the most powerful weapon which you can use to change the world" - Nelson Mandela</div>
+                            <div class = "quote">"Education is the most powerful weapon which you can use to change the world" - Nelson Mandela</div>
                             <div class = "img-container">
                                 <img alt="bongi" src="../assets/img/members/bongi.png" class = "member"/>
                             </div>
@@ -111,7 +111,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot yellow">
-                            <div class = "quote">*screams in international popK sensational sunshine rainbow traditional transfer USB hub shrimp</div>
+                            <div class = "quote">*screams in international Kpop sensational sunshine rainbow traditional transfer USB hub shrimp</div>
                             <div class = "img-container">
                             <img alt="maya" src="../assets/img//members/maya.png" class = "member"/>
                             </div>
@@ -121,7 +121,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot red">
-                            <div class = "quote">Would I rather be feared or loved? Both. I want people to be afriad of how much they love me.</div>
+                            <div class = "quote">Would I rather be feared or loved? Both. I want people to be afraid of how much they love me.</div>
                             <div class = "img-container">
                             <img alt="allan" src="../assets/img//members/allan.png" class = "member"/>
                             </div>
@@ -153,7 +153,7 @@
                     </div>
                     <div class = "col-6 col-sm-4">
                         <div class="dot green">
-                            <div class = "quote">I also wanted to sleep-in but here we both are...</div>
+                            <div class = "quote">I also wanted to sleep in, but here we both are...</div>
                             <div class = "img-container">
                             <img alt="natalie c" src="../assets/img//members/natc.png" class = "member"/>
                             </div>
@@ -277,7 +277,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot red">
-                            <div class = "quote">pie connoisseur</div>
+                            <div class = "quote">Trying to make active choices, not passive choices.</div>
                             <div class = "img-container">
                             <img alt="iris" src="../assets/img//members/iris.png" class = "member"/>
                             </div>
@@ -319,7 +319,7 @@
                     </div>
                     <div class = "col-4 col-sm-3">
                         <div class="dot yellow">
-                            <div class = "quote">“The only thing predictable about life is its unpredictability” – Ratatouille</div>
+                            <div class = "quote">“The only thing predictable about life is its unpredictability.” – Ratatouille</div>
                             <div class = "img-container">
                             <img alt="katrina" src="../assets/img//members/katrina.png" class = "member"/>
                             </div>
