landing: fixed gradient, compressed pngs, added social media icons, added spacing media queries

--- a/indexv15.html
+++ b/indexv15.html
@@ -65,12 +65,12 @@
     <section id="landing-container">
         <div class="landing-container">
             <div class="container">
-                <!-- <div class="social-icons">
+                <div class="social-icons">
                     <a href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
-                </div> -->
+                </div>
                 <!-- <div class="container d-flex align-items-center justify-content-center">
                     <div class="landing-text">
                         <h3><span id="we-are-top" class="landing-text-top">We are</span></h3>
@@ -99,7 +99,7 @@
     <section id="members">
         <div class="container">
             <h2 id="members-title" class="d-flex align-items-center justify-content-center">Who are we?</h2>
-            <p class="container"> Let us introduce you to the hearts and minds behind our work. </p>
+            <p class="container"> Introducing the hearts and creative minds behind our work. </p>
         </div>
         <div class="button" id="members-button">
             <a href="v1.5/members.html">Members</a>
@@ -144,20 +144,6 @@
                 <h3><span class="landing-text-bkd">We are</span></h3>
                 <h1><span class="landing-text-bkd">Invention Corps</span></h1>
             </div>
-        </div>
-    </section> -->
-
-    <!-- About Section -->
-    <!-- <section id="about">
-        <div id="about">
-            <div class="text-box d-flex align-items-center justify-content-center">
-                <h2 id ="about-header" class="jumptarget">Inventing ways to make a better world.</h2>
-                <p id="about-header" class="jumptarget"> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
-            </div>
-        <img class="scene" data-modifier="18" src="assets/img/mainscrollv15/landscape.png">
-        <img class="scene" data-modifier="0" src="assets/img/mainscrollv15/lower-island.png">
-        <script src="https://s.electerious.com/basicScroll/dist/basicScroll.min.js"></script>
-        <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
         </div>
     </section> -->
 
@@ -219,18 +205,6 @@
                 </div>
               </div>
               </div>
-        </div>
-    </section> -->
-
-    <!-- Contact Section
-    <section id="contact">
-        <div class="container">
-            <div class="social-icons">
-                <a href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                <a href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
         </div>
     </section> -->
 
