--- a/v1.5/anindividualproject15.html
+++ b/v1.5/anindividualproject15.html
@@ -126,9 +126,13 @@
                 <div class="container">
                     <h3>Deliverable 1</h3>
                     <div id=underline5></div>
-                    <h7 id="how">How might we....</h7>
+                    <h7 id="how">How might we design branding that portrays a path to recovery?</h7>
                     <div class="container">
-                        <p>Hello</p>
+                        <p id="d1p1">One of the essential features of the app is the AI technology that monitors how each exercise is executed by the
+                        patient. Virtual tools are set up to measure range of motion, angles, and time under pressure of their joint.</p>
+                        <p id="d1p2">We wanted to highlight the use of AI and the element of visually tracking the limbs in our logo, so we added angels and
+                        measurements to the lettering. The eventual goal of recovery is reflected by the sprinting person illustrated at the end
+                        of the logo itself. Finally, we also decided to change the name from NeoMotion AI to Netic Health.</p>
                     </div>
                 </div>
             </div>
@@ -145,7 +149,17 @@
                 <div id=underline6></div>
                 <h7 id="how">How might we....</h7>
                 <div class="container">
-                    <p>Hello</p>
+                    <p id="d2p1">Working with the Netic Tech Team, we needed to create models to learn both camera parameters and user poses with only a
+                    series of images as inputs.</p>
+
+                    <p id="d2p1">In pursuit of this goal, we reviewed, learned, and implemented the basics of pose estimation via an algorithm that
+                    roughly follows the guidelines outlined in [KKA], using Python and TensorFlow for most of the heavy lifting.</p>
+
+                    <p id="d2p1">Despite the mid-semester shift, we shifted to a Unix environment for running and testing our pose estimation
+                    simulations. Ultimately, we were able to implement camera parameter estimation and many of the basics of pose
+                    estimation, and are steadily working our way toward a high fidelity real-time pose estimator.
+                
+                    </p>
                 </div>
             </div>
         </div>
